force-app/main/default/objects/sugati__Resource_Unit__c/sugati__Resource_Unit__c.object-meta.xml
<CustomObject>
    <label>Resource Unit</label>
    <nameField>
        <displayFormat>RU-{00000000}</displayFormat>
        <label>Resource Unit Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>