force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Cabin_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Cabin_Name__c</fullName>
    <description>Name of Cabin</description>
    <inlineHelpText>Name of Cabin</inlineHelpText>
    <label>Cabin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>