force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Cabin_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Cabin_Number__c</fullName>
    <description>Number of Cabin</description>
    <inlineHelpText>Number of Cabin</inlineHelpText>
    <label>Cabin Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>