force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Default_Resource_Configuration__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Default_Resource_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Resource Configuration</label>
    <referenceTo>sugati__Resource_Configuration__c</referenceTo>
    <relationshipLabel>Resource Units</relationshipLabel>
    <relationshipName>Resource_Units</relationshipName>
    <type>Lookup</type>
</CustomField>