force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>