force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Managed_Inventory__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Managed_Inventory__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set to true if inventory is managed for this resource unit, otherwise false.</description>
    <inlineHelpText>Set to true if inventory is managed for this resource unit, otherwise false.</inlineHelpText>
    <label>Managed Inventory</label>
    <type>Checkbox</type>
</CustomField>