force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Resource__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>sugati__Resource__c</referenceTo>
    <relationshipLabel>Resource Units</relationshipLabel>
    <relationshipName>Resource_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>