force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Resource_Name__c</fullName>
    <formula>sugati__S_RU_Resource__r.sugati__S_R_Name__c</formula>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>