force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Room_Name__c</fullName>
    <description>Name of Room</description>
    <inlineHelpText>Name of Room</inlineHelpText>
    <label>Room Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>