force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Room_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Room_Number__c</fullName>
    <description>Number of Room</description>
    <inlineHelpText>Number of Room</inlineHelpText>
    <label>Room Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>