force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Vehicle_Name__c</fullName>
    <description>Name of Vehicle</description>
    <inlineHelpText>Name of Vehicle</inlineHelpText>
    <label>Vehicle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>