force-app/main/default/objects/sugati__Resource_Unit__c/fields/sugati__S_RU_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RU_Vehicle_Number__c</fullName>
    <description>Number of Vehicle</description>
    <inlineHelpText>Number of Vehicle</inlineHelpText>
    <label>Vehicle Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>