force-app/main/default/objects/sugati__Resource_Unit__c/recordTypes/sugati__Room.recordType-meta.xml
<RecordType>
    <fullName>sugati__Room</fullName>
    <active>true</active>
    <label>Room</label>
</RecordType>