force-app/main/default/objects/sugati__Resource_Unit__c/recordTypes/sugati__Vehicle.recordType-meta.xml
<RecordType>
    <fullName>sugati__Vehicle</fullName>
    <active>true</active>
    <label>Vehicle</label>
</RecordType>